修改专项签到的样式

--- a/weapp/apps/customerized_apps/exsign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/exsign/templates/editor/workbench.html
@@ -679,6 +679,9 @@ ui-appPage-commonStyle">
             });
         }
     }
+		W.Broadcaster.on('exsign:change:items', function(value){
+			$(window.frames["phoneFrame"].document).find(".wui-coupon-count").html(value+"张")
+	  });
 
   </script>
 {% block js %}
