修改专项签到的样式

--- a/weapp/apps/customerized_apps/exsign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/exsign/templates/editor/workbench.html
@@ -177,6 +177,10 @@
         margin-left: 100px;
     }
 
+		.edui-editor-toolbarbox,.edui-editor-bottomContainer{
+			display: none;
+		}
+
     </style>
 {% endblock %}
 
@@ -679,6 +683,9 @@ ui-appPage-commonStyle">
             });
         }
     }
+		W.Broadcaster.on('exsign:change:items', function(value){
+			$(window.frames["phoneFrame"].document).find(".wui-coupon-count").html(value+"张")
+	  });
 
   </script>
 {% block js %}
