--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -13,7 +13,7 @@
 		</li>
 		<li class="active">{% if product %}更新{% else %}添加新{% endif %}商品</li>
 	</ul>
-  {% if mall_type and not product %}
+ <!--  {% if mall_type and not product %}
 	<ul class="nav nav-tabs" style="border:none;">
 		<li class="active">
 			<a href="/mall2/product/">添加新商品</a>
@@ -22,7 +22,7 @@
 			<a href="/mall2/product_pool/">商品池</a>
 		</li>
 	</ul>
-    {% endif %}
+    {% endif %} -->
 	<form class="form-horizontal xui-mall-addProductForm xa-addProductForm" method="POST"
         action={% if product %}"/mall2/product/?id={{product.id}}&shelve_type={{product.shelve_type}}"{% else %}"/mall2/product/?_method=put"{%endif%}
         id="editForm" data-id="{% if product %}{{ product.id }}{% else %}0{% endif %}"
