--- a/weapp/apps/customerized_apps/exsign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/exsign/templates/editor/workbench.html
@@ -177,6 +177,10 @@
         margin-left: 100px;
     }
 
+		.edui-editor-toolbarbox,.edui-editor-bottomContainer{
+			display: none;
+		}
+
     </style>
 {% endblock %}
 
