--- a/weapp/termite/static/termite_js/app/component/appkit/exsigndescription/exsigndescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exsigndescription/exsigndescription.html
@@ -292,6 +292,9 @@
 			color: #207CBE;
 			text-decoration: underline;
 		}
+		.wui-description p{
+			padding-bottom: 2px;
+		}
 
     </style>
     <link href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
