--- a/weapp/mall/templates/mall/editor/product_pool.html
+++ b/weapp/mall/templates/mall/editor/product_pool.html
@@ -12,7 +12,7 @@
         </li>
         <li class="active">添加新商品-商品池</li>
     </ul>
-    {% if request.manager.username == 'weshop' or request.manager.username =='weizoomjx' %}
+    {% ifequal request.manager.username 'weshop' %}
     <ul class="nav nav-tabs" style="border:none;">
         <li>
             <a href="/mall2/product/">添加新商品</a>
@@ -21,7 +21,17 @@
             <a href="/mall2/product_pool/">商品池</a>
         </li>
     </ul>
-    {% endif %}
+    {% endifequal %}
+    {% ifequal request.manager.username 'weizoomjx' %}
+    <ul class="nav nav-tabs" style="border:none;">
+        <li>
+            <a href="/mall2/product/">添加新商品</a>
+        </li>
+        <li class="active">
+            <a href="/mall2/product_pool/">商品池</a>
+        </li>
+    </ul>
+    {% endifequal %}
     <div class="xa-productFilterView xui-filterPanel"></div>
     <div class="panel panel-default mt20 xb-rightPanel" style="min-height:120px;">
         <div class="panel-heading">
