--- a/weapp/weixin2/templates/weixin/message/new_template_messages.html
+++ b/weapp/weixin2/templates/weixin/message/new_template_messages.html
@@ -140,7 +140,7 @@
         {{#each items}}
             {{#if_in this.title ../using_templates}}
                 <div class="template_message_item">
-                    <input type="checkbox" name="control" class="template_control" {{#if status}}checked{{/if}} data-template-id="{{template_id}}" data-status = "{{status}}">
+                    <input type="checkbox" name="control" class="template_control" {{#if status}}checked{{/if}} data-template-id="{{template_id}}" data-status = "{{status}}" data-title="{{ title }}">
                     <span>{{title}}（行业：{{industry_name}}）</span>
                     <a href="javascript:void(0)" class="template_edit" title="编辑" data-template-id="{{template_id}}">编辑</a>
                 </div>
@@ -308,6 +308,7 @@ $(document).ready(function(){
     //更改状态
     $('body').delegate('.template_control','click',function(){
         var template_id = $(this).attr('data-template-id');
+        var title = $(this).attr('data-title');
         if( $(this).attr('data-status') == 'true'){
             $(this).attr('data-status','false');
             for(var i=0;i<items.length;i++){
@@ -329,7 +330,8 @@ $(document).ready(function(){
                 woid: W.mid,
                 action: 'status',
                 template_id: template_id,
-                status: status == 'true'
+                status: status == 'true',
+                title:title
             },
             success: function(data){
                 editing = false;
